<resources>
    <string name="app_name">myFavs</string>
    <string name="add_fav">add Fav</string>

    <!-- description_layout.xml -->
    <string name="released">Released:</string>
    <string name="runtime">Runtime:</string>
    <string name="seasons">Seasons:</string>
    <string name="language">Language:</string>
    <string name="genre">Genre:</string>
    <string name="country">Country:</string>
    <string name="plot">History:</string>
    <string name="imdb_rating">Imdb Rating:</string>
    <string name="director">Director:</string>
    <string name="cast">Cast:</string>
    <string name="awards">Awards:</string>
    <string name="ratings">Ratings:</string>
    <string name="type">Type:</string>
    <string name="no_information">~no information~</string>
    <string name="error">something went wrong :/</string>
    <string name="final_page">You are on the last page</string>
    <string name="first_page">You are already on the first page</string>

    <!--  fragment_detail.xml  -->
    <string name="favorite_button_description">Favorite button image (star)</string>
    <string name="cover_image_description">cover image (poster)</string>

    <!-- fragment_home.xml   -->
    <string name="my_favorites_subtitle">favorites list</string>
    <string name="list_is_empty">Favorites list is empty\n:/</string>
    <string name="add_favorite_button_description">add favorite button</string>
    <string name="see_more_details">see more details</string>
    <string name="eye_image">eye image</string>
    <string name="expand_button">expand button</string>

    <!--  fragment_search.xml  -->
    <string name="search_subtitle">Search</string>
    <string name="search_button_description">magnifying glass button to search</string>

    <!--  page_buttons_layout.xml  -->
    <string name="button_previous_page_description">button to go back to previous page</string>
    <string name="next_page_button_description">page forward button</string>

    <!--  search_card_layout.xml  -->
    <string name="input_name">Name</string>
    <string name="input_page_number">Page number</string>
    <string name="input_release_year">Release year</string>
    <string name="all_types">All</string>
    <string name="movies_type">Movies</string>
    <string name="games_type">Games</string>
    <string name="series_type">Series</string>
    <string name="search">Search</string>
    <string name="page">page</string>

    <!--  Snackbar / Dialog -->
    <string name="snackbar">Please, try again! (%1$s)</string>
    <string name="alert">Alert</string>
    <string name="alert_text">Establish an Internet connection to continue</string>
</resources>