<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/page_buttons"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/purple_700"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/scrollView2">

    <ImageView
        android:id="@+id/previous_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_previous_page_description"
        android:src="@drawable/ic_btn_pages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_num_pages"
        app:layout_constraintEnd_toStartOf="@+id/next_page"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toEndOf="@+id/previous_page"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/page" />

    <TextView
        android:id="@+id/tv_num_pages"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_page"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toEndOf="@+id/previous_page"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="1" />

    <ImageView
        android:id="@+id/next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:contentDescription="@string/next_page_button_description"
        android:rotation="180"
        android:src="@drawable/ic_btn_pages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
